Issue #2019345 by johnv: Added new WorkflowTransition class.
Issue #2019345 by johnv: Moved Workflow Form processing code from workflow.module into new WorkflowTransition class.
Issue #2019345 by johnv: Replaced all functional calls to Workflow object by OOP Methods of Workflow class.
Issue #2019345 by johnv: Fixed wrong calls to Workflow::getFirstSid().
Issue #2102405 by johnv: Added basic Entity support for Workflow Field.
Issue #2102405 by johnv: Added Entity support for Workflow Scheduled Transitions.
Issue #2019345 by johnv: Fixed caching for WorkflowState:getStates.
Issue #2019345 by johnv: Changed workflow_node_view() to use Workflow classes.
Issue #2102405 by johnv: Fixed indices for Workflow Scheduled Transitions.
Issue #2019345 by johnv: Fixed order of States in Options list doesn't respect weight.
Issue #2019345 by johnv: Added 'property_info' to Workflow Field for Entity/ Rules support.
Issue #2019345 by johnv: Moved 'workflow_load' functon back to main module, since this is a menu callback.
Issue #2019345 by johnv: Added 'grouped' options for Workflow::getOptions().
Issue #2102663 by johnv: Added support for Workflow Field to workflow_rules sub-module.
Issue #2111043 by johnv: Moved function workflow_field_choices() to WorkflowState->getOptions().
Issue #2102663 by johnv: Fixed apparently rules functions must be in main include.
Issue #2111795 by johnv: Fixed error when adding a Workflow with a name that is a translation of other workflow's name.
Issue #2112263 by Nancydru: Typo in workflow_get_workflow)by_sid().
Issue #2019345 by johnv: Fixed accidentally removed includes from workflow.module file.
Issue #2019345 by johnv: Added extra methods to Workflow objects.
Issue #2019345 by johnv: Added workflow_admin_ui now uses classes, too.
Issue #2019345 by johnv: Added workflow.features.inc now includes workflow.deprecated.inc.
Issue #2019345 by johnv: Added workflow.tokens.inc now uses classes, too.